--- a/MeLearningMVC/MeLearningMVC.csproj
+++ b/MeLearningMVC/MeLearningMVC.csproj
@@ -177,9 +177,20 @@
     <Compile Include="Migrations\201606182045599_InitialModel.Designer.cs">
       <DependentUpon>201606182045599_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606182105425_CreateGigTable.cs" />
+    <Compile Include="Migrations\201606182105425_CreateGigTable.Designer.cs">
+      <DependentUpon>201606182105425_CreateGigTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606182123346_OverideConventionsForGigsAndGenres.cs" />
+    <Compile Include="Migrations\201606182123346_OverideConventionsForGigsAndGenres.Designer.cs">
+      <DependentUpon>201606182123346_OverideConventionsForGigsAndGenres.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\Genre.cs" />
+    <Compile Include="Models\Gig.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -254,6 +265,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201606182045599_InitialModel.resx">
       <DependentUpon>201606182045599_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606182105425_CreateGigTable.resx">
+      <DependentUpon>201606182105425_CreateGigTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606182123346_OverideConventionsForGigsAndGenres.resx">
+      <DependentUpon>201606182123346_OverideConventionsForGigsAndGenres.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
