--- a/MeLearningMVC/MeLearningMVC.csproj
+++ b/MeLearningMVC/MeLearningMVC.csproj
@@ -190,6 +190,10 @@
     <Compile Include="Migrations\201606182130367_PoulateGenresTable.Designer.cs">
       <DependentUpon>201606182130367_PoulateGenresTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606272023035_AddForeingKeyProertiesToGig.cs" />
+    <Compile Include="Migrations\201606272023035_AddForeingKeyProertiesToGig.Designer.cs">
+      <DependentUpon>201606272023035_AddForeingKeyProertiesToGig.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -281,6 +285,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201606182130367_PoulateGenresTable.resx">
       <DependentUpon>201606182130367_PoulateGenresTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606272023035_AddForeingKeyProertiesToGig.resx">
+      <DependentUpon>201606272023035_AddForeingKeyProertiesToGig.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
